--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "eslint-config-airbnb-base": "3.0.1",
     "eslint-plugin-import": "1.8.0",
     "mocha": "2.4.5",
-    "mysql": "2.10.2",
-    "sequelize": "3.23.2"
+    "mysql2": "2.1.0",
+    "sequelize": "5.21.5"
   },
   "dependencies": {
     "object-assign": "4.1.0",
